Carousel image size fix on mobile

--- a/themes/cdap/assets/scss/components/section-announcement.scss
+++ b/themes/cdap/assets/scss/components/section-announcement.scss
@@ -132,8 +132,6 @@ section.announcement {
 
     @include media-breakpoint-down(sm) {
       align-self: center;
-      width: 100%;
-      height: 100%;
     }
   }
 
